comm/protocol/HTTPArgs: Clean URL construction future deprecation.